# controllers/releases.go
@@ -1,121 +1,93 @@
 package controllers
 
 import (
+	"fmt"
 	"net/http"
+	"strings"
 
 	"github.com/convox/kernel/Godeps/_workspace/src/github.com/ddollar/logger"
 	"github.com/convox/kernel/Godeps/_workspace/src/github.com/gorilla/mux"
 
-	"github.com/convox/kernel/helpers"
 	"github.com/convox/kernel/models"
 )
 
-func ReleaseShow(rw http.ResponseWriter, r *http.Request) {
-	log := releasesLogger("show").Start()
+func ReleaseList(rw http.ResponseWriter, r *http.Request) error {
+	vars := mux.Vars(r)
+	app := vars["app"]
 
+	_, err := models.GetApp(app)
+
+	if awsError(err) == "ValidationError" {
+		return RenderNotFound(rw, fmt.Sprintf("no such app: %s", app))
+	}
+
+	if err != nil {
+		return err
+	}
+
+	releases, err := models.ListReleases(app)
+
+	if err != nil {
+		return err
+	}
+
+	return RenderJson(rw, releases)
+}
+
+func ReleaseShow(rw http.ResponseWriter, r *http.Request) error {
 	vars := mux.Vars(r)
 	app := vars["app"]
 	release := vars["release"]
+
+	_, err := models.GetApp(app)
+
+	if awsError(err) == "ValidationError" {
+		return RenderNotFound(rw, fmt.Sprintf("no such app: %s", app))
+	}
 
 	rr, err := models.GetRelease(app, release)
 
-	if err != nil {
-		helpers.Error(log, err)
-		RenderError(rw, err)
-		return
+	if err != nil && strings.HasPrefix(err.Error(), "no such release") {
+		return RenderNotFound(rw, fmt.Sprintf("no such release: %s", release))
 	}
 
-	RenderJson(rw, rr)
+	fmt.Printf("err %+v\n", err)
+
+	if err != nil {
+		return err
+	}
+
+	return RenderJson(rw, rr)
 }
 
-func ReleaseCreate(rw http.ResponseWriter, r *http.Request) {
-	log := releasesLogger("create").Start()
-
-	vars := mux.Vars(r)
-	name := vars["app"]
-
-	manifest := GetForm(r, "manifest")
-	tag := GetForm(r, "tag")
-
-	app, err := models.GetApp(name)
-
-	if err != nil {
-		helpers.Error(log, err)
-		RenderError(rw, err)
-		return
-	}
-
-	release, err := app.ForkRelease()
-
-	if err != nil {
-		helpers.Error(log, err)
-		RenderError(rw, err)
-		return
-	}
-
-	build := models.NewBuild(app.Name)
-	build.Id = tag
-	build.Release = release.Id
-	build.Status = "complete"
-
-	release.Build = build.Id
-	release.Manifest = manifest
-
-	err = build.Save()
-
-	if err != nil {
-		helpers.Error(log, err)
-		RenderError(rw, err)
-		return
-	}
-
-	err = release.Save()
-
-	if err != nil {
-		helpers.Error(log, err)
-		RenderError(rw, err)
-		return
-	}
-
-	err = release.Promote()
-
-	if err != nil {
-		helpers.Error(log, err)
-		RenderError(rw, err)
-		return
-	}
-
-	log.Success("step=release.create app=%q", app.Name)
-
-	RenderText(rw, "ok")
-}
-
-func ReleasePromote(rw http.ResponseWriter, r *http.Request) {
-	log := releasesLogger("promote").Start()
-
+func ReleasePromote(rw http.ResponseWriter, r *http.Request) error {
 	vars := mux.Vars(r)
 	app := vars["app"]
 	release := vars["release"]
 
-	rel, err := models.GetRelease(app, release)
+	_, err := models.GetApp(app)
 
-	if err != nil {
-		helpers.Error(log, err)
-		RenderError(rw, err)
-		return
+	if awsError(err) == "ValidationError" {
+		return RenderNotFound(rw, fmt.Sprintf("no such app: %s", app))
 	}
 
-	err = rel.Promote()
+	rr, err := models.GetRelease(app, release)
 
-	if err != nil {
-		helpers.Error(log, err)
-		RenderError(rw, err)
-		return
+	if err != nil && strings.HasPrefix(err.Error(), "no such release") {
+		return RenderNotFound(rw, fmt.Sprintf("no such release: %s", release))
 	}
 
-	log.Success("step=release.promote app=%q", app)
+	if err != nil {
+		return err
+	}
 
-	RenderText(rw, "ok")
+	err = rr.Promote()
+
+	if err != nil {
+		return err
+	}
+
+	return RenderJson(rw, rr)
 }
 
 func releasesLogger(at string) *logger.Logger {
